--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-router": "^2.8.1",
     "request": "^2.75.0",
     "request-promise": "^4.1.1",
-    "reqwest": "^2.0.5"
+    "reqwest": "^2.0.5",
+    "xhr2": "^0.1.3"
   }
 }
